# guh_quant

./: ARCHITECTURE.md  CACHE_IMPROVEMENTS.md  Cargo.toml  QUICKSTART.md  README.md  UPGRADE_COMPLETE.md  all_tickers.txt  analysis_feature_importance.py  averagebetween_comments.py  build_flattened_with_portfolio_features.py  comment_averages.txt  correlations_test.csv  estimate_points_from_trace.py  estimated_points.csv  evaluate_points_predictor.py  feature_importances.csv  feature_importances_augmented.csv  fetch_log.txt  fetch_monthly_cache.py  fetch_stocks.py  fit_linear_surrogate.py  intervals_between_comments.csv  linear_surrogate.json  monthly_cache_checkpoint.json  points_store.json  predicted_points.csv  rejected_tickers.txt  request_trace.jsonl  requirements.txt  sector_overrides.json  stocks_cache.json  stocks_cache_monthly.json  study.py  study_augmented.csv  study_correlations.csv  threshold_analysis.py  train_points_predictor.py
src/: investor.rs  main.rs  points.rs  portfolio.rs  stocks.rs
