[package]
name = "quant_proj"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
